--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-asgiref==3.5.2
-Django==4.1.1
-Pillow==9.2.0
-sqlparse==0.4.2
-
 appdirs==1.4.4
-
+asgiref==3.5.2
 astroid==2.4.2
 autopep8==1.5.4
 Babel==2.10.3
@@ -17,7 +12,7 @@ click==7.1.2
 colorama==0.4.4
 cs50==5.0.4
 distlib==0.3.1
-
+Django==4.1.1
 django-ckeditor==5.9.0
 django-cors-headers==3.5.0
 django-crispy-forms==1.9.2
@@ -40,10 +35,11 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 jmespath==0.10.0
 lazy-object-proxy==1.4.3
+Markdown==3.4.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mysqlclient==2.1.1
-
+Pillow==9.2.0
 platformdirs==2.5.2
 postgres==4.0
 prices==1.1.0
@@ -52,6 +48,8 @@ psycopg2-pool==1.1
 pycodestyle==2.6.0
 PyJWT==1.7.1
 pylint==2.6.0
+PyMySQL==1.0.2
+pyserial==3.5
 python-dateutil==2.8.1
 python-dotenv==0.13.0
 pytz==2020.1
@@ -59,9 +57,10 @@ requests==2.23.0
 s3transfer==0.3.3
 six==1.15.0
 SQLAlchemy==1.3.17
-
+sqlparse==0.4.2
 termcolor==1.1.0
 toml==0.10.2
+tzdata==2022.4
 urllib3==1.25.9
 virtualenv==20.2.1
 Werkzeug==0.15.4
