--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 appdirs==1.4.4
+arrow==1.2.3
 asgiref==3.5.2
 astroid==2.4.2
 autopep8==1.5.4
 Babel==2.10.3
+binaryornot==0.4.4
 boto3==1.14.31
 botocore==1.17.31
 cachelib==0.1
@@ -10,9 +12,11 @@ certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
 colorama==0.4.4
+cookiecutter==2.1.1
 cs50==5.0.4
 distlib==0.3.1
 Django==4.1.1
+django-browser-reload==1.6.0
 django-ckeditor==5.9.0
 django-cors-headers==3.5.0
 django-crispy-forms==1.9.2
@@ -21,6 +25,7 @@ django-filter==2.3.0
 django-js-asset==1.2.2
 django-prices==2.3.0
 django-storages==1.9.1
+django-tailwind==3.4.0
 djangorestframework==3.11.1
 djangorestframework-simplejwt==5.1.0
 docutils==0.15.2
@@ -34,6 +39,7 @@ install==1.3.3
 isort==5.6.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jinja2-time==0.2.0
 jmespath==0.10.0
 lazy-object-proxy==1.4.3
 Markdown==3.4.1
@@ -44,6 +50,7 @@ Pillow==9.2.0
 platformdirs==2.5.2
 postgres==4.0
 prices==1.1.0
+psycopg2==2.9.4
 psycopg2-binary==2.9.3
 psycopg2-pool==1.1
 pycodestyle==2.6.0
@@ -53,13 +60,16 @@ PyMySQL==1.0.2
 pyserial==3.5
 python-dateutil==2.8.1
 python-dotenv==0.13.0
+python-slugify==6.1.2
 pytz==2020.1
+PyYAML==6.0
 requests==2.23.0
 s3transfer==0.3.3
 six==1.15.0
 SQLAlchemy==1.3.17
 sqlparse==0.4.2
 termcolor==1.1.0
+text-unidecode==1.3
 toml==0.10.2
 tzdata==2022.4
 urllib3==1.25.9
